--- a/src/main/resources/templates/pages/cart/cart_list.html
+++ b/src/main/resources/templates/pages/cart/cart_list.html
@@ -54,39 +54,18 @@
                             <tr>
                                 <td colspan="9" class="td_first">장바구니에 상품이 없습니다.</td>
                             </tr>
-                            <tr>
-                                <td><input class="check checkbox" type="checkbox" /></td>
+                            <tr th:each="cart : ${getCartItemsRespDtoList}" >
+                                <td><input class="check checkbox" type="checkbox" th:data-set-idx="${cart.cartItemIdx}" /></td>
                                 <td><img src="../images/market_item1.jpg" alt="사과 샘플"/></td>
-                                <td>과일</td>
-                                <td>사과 500g</td>
-                                <td>1</td>
-                                <td>10%</td>
-                                <td>40p</td>
-                                <td>4,000</td>
-                                <td><strong>3,600</strong>원</td>
+                                <td th:text="${cart.prodType}">과일</td>
+                                <td th:text="${cart.prodName}">사과 500g</td>
+                                <td th:text="${cart.cartItemQuantity}">1</td>
+                                <td th:text="${cart.prodDiscount}">10%</td>
+                                <td th:text="${cart.prodPoint}">40p</td>
+                                <td th:text="${cart.prodPrice}">4,000</td>
+                                <td> <strong>3,600</strong>원</td>
                             </tr>
-                            <tr>
-                                <td><input class="check checkbox" type="checkbox"/></td>
-                                <td><img src="../images/market_item1.jpg" alt="사과 샘플"/></td>
-                                <td>과일</td>
-                                <td>사과 500g</td>
-                                <td>1</td>
-                                <td>10%</td>
-                                <td>40p</td>
-                                <td>4,000</td>
-                                <td><strong>3,600</strong>원</td>
-                            </tr>
-                            <tr>
-                                <td><input class="check checkbox" type="checkbox"/></td>
-                                <td><img src="../images/market_item1.jpg" alt="사과 샘플"/></td>
-                                <td>과일</td>
-                                <td>사과 500g</td>
-                                <td>1</td>
-                                <td>10%</td>
-                                <td>40p</td>
-                                <td>4,000</td>
-                                <td><strong>3,600</strong>원</td>
-                            </tr>
+
                         </table><!-- .tb1 -->
                         <button class="btnSD" onclick="deleteCart()">선택삭제</button>
                         <div class="order_info_last">
