--- a/src/main/resources/templates/layout/ad_header.html
+++ b/src/main/resources/templates/layout/ad_header.html
@@ -15,13 +15,13 @@
 <body>
 <div class="header_wrapper">
     <header>
-        <a href="http://localhost:8080/admin/users/products/orders" id="logo">
+        <a href="/admin/users/products/orders" id="logo">
             <img th:src="@{/images/admin/admin_logo.jpg}" alt="admin_logo"/>
         </a>
         <div class="home">
-            <a href="http://localhost:8080/">HOME | </a>
+            <a href="/">HOME | </a>
             <a href="auth/user/logout">로그아웃 | </a>
-            <a href="http://localhost:8080/client/boards?section=community&type=qna">고객센터</a>
+            <a href="/client/boards?section=community&type=qna">고객센터</a>
         </div>
     </header>
 </div>
