--- a/src/main/resources/templates/pages/admin/admin_main.html
+++ b/src/main/resources/templates/pages/admin/admin_main.html
@@ -24,7 +24,7 @@
                         <div id="article1">
                             <div class="table_heading" id="prod_heading">
                                 <a id="prod_now">상품현황</a>
-                                <a href="http://localhost:8080/admin/products" id="prod_more">+ 더보기</a>
+                                <a href="/admin/products" id="prod_more">+ 더보기</a>
                             </div>
                             <table id="prod_table">
                                 <tr>
@@ -50,7 +50,7 @@
                         <div id="article2">
                             <div class="table_heading" id="order_heading">
                                 <a id="order_now">주문현황</a>
-                                <a href="http://localhost:8080/admin/orders" id="order_more">+ 더보기</a>
+                                <a href="/admin/orders" id="order_more">+ 더보기</a>
                             </div>
                             <table id="order_table">
                                 <tr>
@@ -78,7 +78,7 @@
                         <div id="article3">
                             <div class="table_heading" id="user_heading">
                                 <a id="user_now">회원현황</a>
-                                <a href="http://localhost:8080/admin/users" id="user_more">+ 더보기</a>
+                                <a href="/admin/users" id="user_more">+ 더보기</a>
                             </div>
                             <table id="user_table">
                                 <tr>
