--- a/src/main/resources/templates/pages/admin/admin_product_list.html
+++ b/src/main/resources/templates/pages/admin/admin_product_list.html
@@ -95,7 +95,7 @@
             console.log(submitData)
 
             try {
-                const resp = await axios.delete('http://localhost:8080/api/admin/product',{
+                const resp = await axios.delete('/api/admin/product',{
                     headers : {
                         "Content-Type" : "application/json"
                     },
