--- a/src/main/resources/templates/pages/auth/signup.html
+++ b/src/main/resources/templates/pages/auth/signup.html
@@ -115,7 +115,7 @@
                     <tr>
                         <th>이름</th>
                         <td>
-                            <input class="input-group" type="text" placeholder="이름 입력">
+                            <input class="input-group" id="userName" type="text" placeholder="이름 입력">
                         </td>
                     </tr>
                     <tr>
