--- a/src/main/resources/templates/pages/auth/login.html
+++ b/src/main/resources/templates/pages/auth/login.html
@@ -44,9 +44,9 @@
                             </div>
                             <div>
                                 <p class="selction-info__link">
-                                    <a href="http://localhost:8080/view/find/id">아이디 찾기</a>&nbsp;|&nbsp;
-                                    <a href="http://localhost:8080/view/find/pwd">비밀번호 찾기</a>&nbsp;|&nbsp;
-                                    <a href="http://localhost:8080/view/signup">회원가입</a>
+                                    <a href="/view/find/id">아이디 찾기</a>&nbsp;|&nbsp;
+                                    <a href="/view/find/pwd">비밀번호 찾기</a>&nbsp;|&nbsp;
+                                    <a href="/view/signup">회원가입</a>
                                 </p>
                             </div>
                         </div>
